# ring-buffer_cam

./: .gitignore  .gitmodules  AGENTS.md  README.md  RUN_SEQ_UPGRADE_PLAN.md  SIGNOFF.md  addr_enc_logic.vhd  addr_enc_logic_partitioned.vhd  addr_enc_logic_pipe.vhd  addr_enc_logic_small.vhd  cam_mem_a5.vhd  cam_mem_blk_a5.vhd  components.ipx  mu3e_ip_cores.ipx  onewire_sense_vector_bridge_26p0p330_hw.tcl  regenerate_ipx_catalog.sh  ring_buffer_cam.vhd  ring_buffer_cam_hw.tcl  ring_buffer_cam_v2_core.vhd
altera_lvds/altera_lvds_core14/: altera_lvds_core14.sv  altera_lvds_sdc.tcl  main.tcl  sdc_util.tcl
altera_lvds/altera_lvds_core20/: altera_lvds_core20_hw.tcl  altera_lvds_sdc.tcl
altera_lvds/altera_lvds_driver/: altera_lvds_driver.sv  altera_lvds_driver_hw.tcl
altera_lvds/top/: altera_lvds_hw.tcl  gui.properties  migration_map_rx.csv  migration_map_tx.csv  pll.tcl  port_map_tx.csv
board_projects/fe_scifi_feb_v3/: README.md  report_lvds_worst_paths.tcl  report_named_clock_domains.tcl  report_pipe_fail_paths.tcl  report_xcvr_exact_paths_basic.tcl  timing_clock_aliases.tcl  top.qip  top_lat4.qip  top_nostp_pipe.qpf  top_nostp_pipe_lvdsctrl_nofe.qsf  top_pipe_lvdsctrl.qip  top_stp_pipe_runctl_hitstack0.qsf  top_stp_pipe_runctl_ingress.qsf  top_stp_pipe_runctl_mts_stage.qsf  top_stp_pipe_runctl_ready.qsf  top_stp_pipe_sc.qsf  top_stp_pipe_sc156_lite.qsf
doc/: RESTORE.md  SIGNOFF.md  STYLE.md  rtl_note.md  upgrade_plan.md
docs/: RESTORE.md  STYLE.md
figures/: mu3e_logo_ascii_75.txt
firmware_builds/: README.md
firmware_builds/doc/: CONTRACT.md  MATH.md  MUTRIG.md  RUNCTL_HITSTACK_SIGNALTAP_PLAN.md  SETUP.md  SIGNOFF.md  TEST_PLAN.md  TEST_PLAN_PHASE5.md
lvds_error_counter_fabric/: avst2cntr_fab_hw.tcl  avsterr2cntr_fab.vhd  logic_reduc4cnt.vhd
misc/conduit2rst/: conduit2rst.vhd  conduit2rst_hw.tcl
misc/dbg_counter_fab/: dbg_counter_fab.vhd  dbg_counter_fab_hw.tcl
misc/dbg_issp_fab/: dbg_issp2runctrl.vhd  dbg_issp2runctrl_hw.tcl  dbg_mm2runctrl_hw.tcl
misc/inactive_reset_source/: inactive_reset_source.sv  inactive_reset_source_hw.tcl
misc/mutrig_lane_source_mux/: README.md  mutrig_lane_source_mux.svd  mutrig_lane_source_mux_hw.tcl
misc/pulse_fanout8/: pulse_fanout8.sv  pulse_fanout8_hw.tcl
mu3e_lvds_controller/: altera_lvds_rx_28nm_hw.tcl  lvds_rx_controller_pro.terp.vhd  lvds_rx_controller_pro_hw.tcl
mutrig_lane_source_mux/: mutrig_lane_source_mux_hw.tcl
mutrig_lane_source_mux/rtl/: mutrig_lane_source_mux.sv
quartus_system/: components.ipx  debug_sc_system_v2.qsys  debug_sc_system_v3_lvdsctrl.qsys  debug_sc_system_v3_lvdsctrl.sopcinfo  feb_bringup_system.tcl  feb_system_v3.qsys  feb_system_v3_pipe_lvdsctrl.qsys  mu3e_ip_cores.ipx  mutrig_datapath_system_v3.qsys  normalize_ipx_catalog.py  regenerate_ipx_catalog.sh  scifi_datapath_system_v3.qsys  upload_system_v3_lvdsctrl.qsys  upload_system_v3_lvdsctrl.sopcinfo
quartus_system/debug_sc_system_v3_lvdsctrl/: debug_sc_system_v3_lvdsctrl.html  debug_sc_system_v3_lvdsctrl.xml  debug_sc_system_v3_lvdsctrl_generation.rpt  debug_sc_system_v3_lvdsctrl_generation_previous.rpt
quartus_system/feb_bringup_system/: feb_bringup_system.xml  feb_bringup_system_generation.rpt  feb_bringup_system_generation_previous.rpt
quartus_system/feb_system_v3_pipe_lvdsctrl/: feb_system_v3_pipe_lvdsctrl.html  feb_system_v3_pipe_lvdsctrl_generation.rpt  feb_system_v3_pipe_lvdsctrl_generation_previous.rpt
quartus_system/model/: README.md
quartus_system/upload_system_v3_lvdsctrl/: upload_system_v3_lvdsctrl.cmp  upload_system_v3_lvdsctrl.html  upload_system_v3_lvdsctrl.xml  upload_system_v3_lvdsctrl_generation.rpt  upload_system_v3_lvdsctrl_generation_previous.rpt
rtl/: addr_enc_logic_partitioned.vhd  alt_simple_dpram.vhd  ring_buffer_cam.vhd  ring_buffer_cam_v2_core.vhd
rtl/alt_fifo/: scfifo_w8d32.cmp
rtl/sv_ver/: cam_primitive_m10k_sv.sv  ring_buffer_cam.sv  ring_buffer_cam_core.sv  ring_buffer_cam_fifo.sv  ring_buffer_cam_sv_pkg.sv
rtl/vhd_ver/: ring_buffer_cam_legacy_core.vhd  ring_buffer_cam_v2_core.vhd
script/: ring_buffer_cam.svd  ring_buffer_cam_cmsis_svd.tcl  ring_buffer_cam_csr_meta.tcl  ring_buffer_cam_hw.tcl  ring_buffer_cam_presets.qprs
scripts/: dv_batch_run_cases.py  dv_case_report.py  dv_signoff_run.py  questa_one.mk  questa_one_env.sh
syn/: SYN_REPORT.md
syn/quartus/: addr_enc_logic_syn_p2.qsf  addr_enc_logic_syn_p2_top.vhd  addr_enc_logic_syn_p3.qsf  addr_enc_logic_syn_p3_top.vhd  addr_enc_logic_syn_p4.qsf  addr_enc_logic_syn_p4_top.vhd  report_sv_timing_paths.tcl  ring_buffer_cam_syn.qpf  ring_buffer_cam_syn.sdc  ring_buffer_cam_syn_harness.vhd  ring_buffer_cam_syn_p1.qsf  ring_buffer_cam_syn_p1_top.vhd  ring_buffer_cam_syn_p2.qsf  ring_buffer_cam_syn_p2_top.vhd  ring_buffer_cam_syn_p3.qsf  ring_buffer_cam_syn_p3_top.vhd  ring_buffer_cam_syn_p4.qsf  ring_buffer_cam_syn_p4_top.vhd  ring_buffer_cam_syn_sv_harness.sv  ring_buffer_cam_syn_sv_p4.qsf  ring_buffer_cam_syn_sv_p4_top.sv  ring_buffer_cam_syn_v23.qsf  ring_buffer_cam_syn_v23_top.vhd  ring_buffer_cam_v23_syn_harness.vhd  run_signoff.sh
system_console_toolkit/fe_scifi/system_console/lib/tdom/tdom-0.9.4-src/: configure.ac
system_console_toolkit/fe_scifi/system_console/lib/tdom/tdom-0.9.4-src/apps/: xslt.tcl
system_console_toolkit/fe_scifi/system_console/lib/tdom/tdom-0.9.4-src/doc/: domDoc.xml  domNode.html  expat.n  expatapi.html
system_console_toolkit/fe_scifi/system_console/lib/tdom/tdom-0.9.4-src/extensions/tnc/: configure.in
system_console_toolkit/fe_scifi/system_console/lib/tdom/tdom-0.9.4-src/generic/: datatypes.c  domxpath.c  tclexpat.h  tclpull.h  tdomDecls.h  tdominit.c  xmlsimple.c
system_console_toolkit/fe_scifi/system_console/lib/tdom/tdom-0.9.4-src/tests/: all.tcl
tb/: BUG_HISTORY.md  DV_BASIC.md  DV_COV.md  DV_CROSS.md  DV_EDGE.md  DV_ERROR.md  DV_HARNESS.md  DV_PLAN.md  DV_PROF.md  DV_REPORT.json  DV_REPORT.md  DV_SIGNOFF.md  FORMAL_PLAN.md  README.md
tb/REPORT/: README.md
templates/: cmsis_svd_ip_template.tcl  ip_template.svd  verilog_user.tpl  vhdl_user.tpl
trash_bin/: .gitignore  README.md
(+4209 files in other folders)
